fixing the nav jump

--- a/css/style.css
+++ b/css/style.css
@@ -780,6 +780,7 @@ body {
   left: 0;
   opacity: 0;
   width: 0;
+  transform: scale(0.1);
   z-index: 1200;
   transition: all .6s ease-in-out; }
 
@@ -817,7 +818,8 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  transform: scale(1);
+  width: 100vw; }
 
 .navigation__icon {
   position: relative;
