--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -57,6 +57,7 @@
     left: 0;
     opacity: 0;
     width: 0;
+    transform: scale(0.1);
     z-index: 1200;
     transition: all .6s ease-in-out;
   }
@@ -102,7 +103,8 @@
 
   &__checkbox:checked ~ &__nav {
     opacity: 1;
-    width: 100%;
+    transform: scale(1);
+    width: 100vw;
   }
 
 
